--- a/FirstApp/app/src/main/res/layout/activity_page3.xml
+++ b/FirstApp/app/src/main/res/layout/activity_page3.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageButton
-        android:layout_width="fill_parent"
-        android:layout_height="200dp"
-        android:id="@+id/imageButton"
-        android:background="@color/bright_foreground_material_light" />
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,4 +19,16 @@
         android:text="Large Text"
         android:id="@+id/tv2"
         android:layout_gravity="center_horizontal" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:id="@+id/progressBar"
+        android:max="10"
+        android:maxHeight="50dip"
+        android:minHeight="35dip"
+        android:layout_gravity="center_horizontal" />
+
+
 </LinearLayout>
