--- a/FirstApp/app/src/main/res/layout/content_main.xml
+++ b/FirstApp/app/src/main/res/layout/content_main.xml
@@ -42,4 +42,13 @@
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="page4"
+        android:id="@+id/button4"
+        android:layout_below="@+id/button3"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
