--- a/FirstApp/app/src/main/res/layout/activity_page4.xml
+++ b/FirstApp/app/src/main/res/layout/activity_page4.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/random" />
 
 
-    <RelativeLayout
-        android:id="@+id/canvasLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp">
 
-
-
-        <ImageView
+        <com.example.panupong.firstapp.canvasView
+            android:id="@+id/cview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="61dp" />
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
-    </RelativeLayout>
-</LinearLayout>
+
+</RelativeLayout>
