--- a/FirstApp/app/src/main/res/layout/activity_page4.xml
+++ b/FirstApp/app/src/main/res/layout/activity_page4.xml
@@ -7,8 +7,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/random" />
+        android:text="reset"
+        android:id="@+id/random"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/start"
+        android:layout_toEndOf="@+id/start" />
 
 
     <LinearLayout
@@ -21,6 +24,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/tv_score"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/random"
+        android:layout_toEndOf="@+id/random" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="time"
+        android:id="@+id/tv_time"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:id="@+id/start"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
